# ideal-gases

./: .gitignore  .pre-commit-config.yaml  BE.m  DEVELOPER_GUIDE.md  FD.m  LICENSE  PlotPolyLog.m  PlotQuantumEuler.m  PolyLog.m  QuantumEulerExact.m  QuantumEulerExact_modif.m  README.md  dfrhoeBE.m  dfrhoeFD.m  dfrhotBE.m  dfrhotFD.m  frhoeBE.m  frhoeFD.m  frhotBE.m  frhotFD.m  pyproject.toml  vPolylog.m  zFinder.m
.github/workflows/: ci.yml  publish.yml
cpp/: CMakeLists.txt
cpp/bindings/: polylog_bindings.cpp
cpp/include/: polylog.h
cpp/src/: polylog.cpp
cpp/tests/: polylog_test.cpp
matlab/: EulerExact.m  EulerExactToro.m  PlotEulerSol.m  PlotPolyLog.m  PlotQEuler.m  PolyLog.m  QEulerExact.m  QEulerExactToro.m
scripts/: plot_classical_sod_shock_tube.py  plot_polylogarithms.py  plot_quantum_euler_solutions.py
src/euler/: __init__.py  polylog.py  riemann.py
src/euler/cli/: __init__.py  commands.py  config.py  export.py  grid.py
src/euler/cli/presets/: __init__.py  quantum.py  toro.py
src/ideal_gases/: __init__.py  _polylog.pyi  polylog.py  riemann.py
src/ideal_gases/cli/: __init__.py  commands.py  config.py  export.py  grid.py  plot.py
src/ideal_gases/cli/interactive/: __init__.py  _widgets.py  classical.py  defaults.py  quantum.py
src/ideal_gases/cli/presets/: __init__.py  quantum.py  toro.py
tests/: conftest.py  test_cli.py  test_cli_interactive.py  test_cli_plot.py  test_polylog.py  test_riemann.py
