[project]
name = "ideal-gases"
version = "0.1.2"
description = "Compute classical and quantum Euler solutions"
readme = "README.md"
authors = [
    { name = "Manuel A. Diaz", email = "manuel.ade@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
]
keywords = ["riemann", "euler", "quantum", "polylogarithm", "cfd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/wme7/ideal-gases"
Repository = "https://github.com/wme7/ideal-gases"
Issues = "https://github.com/wme7/ideal-gases/issues"

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.source-dir = "cpp"
wheel.packages = ["src/ideal_gases"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_CPP_TESTS = "OFF"

[project.optional-dependencies]
plot = ["matplotlib>=3.9"]

[dependency-groups]
dev = [
    "matplotlib>=3.9",
    "mpmath>=1.3",
    "pre-commit>=4.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "ty>=0.0.58",
]

[project.scripts]
euler = "ideal_gases.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["ideal_gases"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "*win* *i686* *musllinux* pp*"
test-requires = ["pytest>=8", "matplotlib>=3.9", "mpmath>=1.3"]
test-command = "pytest {project}/tests -q"
environment = "MPLBACKEND=Agg"
